fix select visible focus

--- a/src/pixel/Button/Button.module.css
+++ b/src/pixel/Button/Button.module.css
@@ -38,6 +38,8 @@
 }
 
 .button:focus {
+  z-index: 3;
+
   outline: none;
 }
 
