--- a/src/pixel/Select/Select.module.css
+++ b/src/pixel/Select/Select.module.css
@@ -49,7 +49,7 @@
   outline: none;
 }
 
-.select:focus-visible {
+.select[data-focus-visible="true"] {
   outline: var(--focus-outline);
 }
 
